[gd_scene load_steps=13 format=3 uid="uid://byk4sox5ju4k7"]

[ext_resource type="Script" path="res://3D/painting/painting.gd" id="1_u30wk"]
[ext_resource type="Shader" uid="uid://hqgdb14tom3y" path="res://3D/painting/painting.tres" id="2_kkfxk"]
[ext_resource type="Script" path="res://3D/point_counter.gd" id="3_0i20x"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_e7b78"]
noise_type = 2
frequency = 0.001
domain_warp_enabled = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_dqqxj"]
seamless = true
seamless_blend_skirt = 1.0
noise = SubResource("FastNoiseLite_e7b78")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fomur"]
render_priority = 0
shader = ExtResource("2_kkfxk")
shader_parameter/DistortionSpeed = 0.2
shader_parameter/NoiseStrength = 0.2
shader_parameter/NoiseTexture = SubResource("NoiseTexture2D_dqqxj")

[sub_resource type="PlaneMesh" id="PlaneMesh_xn4c7"]
size = Vector2(3, 2)
subdivide_width = 10
subdivide_depth = 10

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_awr57"]
albedo_color = Color(0.330123, 0.196992, 0.11641, 1)
roughness = 0.64

[sub_resource type="BoxMesh" id="BoxMesh_opp5h"]
size = Vector3(0.1, 2.2, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_33smm"]
size = Vector3(0.1, 3.2, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_kl6ls"]
size = Vector3(3, 1, 2)

[sub_resource type="PlaneMesh" id="PlaneMesh_x0bn3"]
size = Vector2(1, 0.5)

[node name="Painting" type="Node3D"]
script = ExtResource("1_u30wk")
viewport_material = SubResource("ShaderMaterial_fomur")

[node name="Painting" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("PlaneMesh_xn4c7")

[node name="Frame" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.52196, 0, 0)
material_override = SubResource("StandardMaterial3D_awr57")
mesh = SubResource("BoxMesh_opp5h")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.522, 0, 0)
material_override = SubResource("StandardMaterial3D_awr57")
mesh = SubResource("BoxMesh_opp5h")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Frame"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.00387561, 1.04464, 0)
material_override = SubResource("StandardMaterial3D_awr57")
mesh = SubResource("BoxMesh_33smm")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Frame"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.004, -1.045, 0)
material_override = SubResource("StandardMaterial3D_awr57")
mesh = SubResource("BoxMesh_33smm")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(1440, 960)

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.961795, 0.871643)
shape = SubResource("BoxShape3D_kl6ls")

[node name="point_counter" type="Node3D" parent="."]
transform = Transform3D(-4.09165e-08, 1.53795e-08, -1, 0.351842, 0.93606, 0, 0.93606, -0.351842, -4.37114e-08, 0, -1.24346, 0.193158)
script = ExtResource("3_0i20x")

[node name="MeshInstance3D" type="MeshInstance3D" parent="point_counter"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0, 0)
mesh = SubResource("PlaneMesh_x0bn3")

[node name="Label3D" type="Label3D" parent="point_counter/MeshInstance3D"]
transform = Transform3D(1, 3.60245e-23, 8.88178e-16, 0, -4.37114e-08, 1, 4.23516e-22, -1, -4.37114e-08, -1.12703e-09, 0.0773544, 0)
modulate = Color(0, 0, 0, 1)
text = "0
"
font_size = 60

[connection signal="counter_updated" from="." to="point_counter" method="update_counter"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_exited"]
